# example-runtime

./: .gitignore  Cargo.toml  Makefile  README.md
api/: Cargo.toml
api/src/: api.rs
client/: Cargo.toml
client/src/: main.rs
scripts/: common.sh  download_artifacts.sh  symlink_artifact.sh  symlink_artifacts.sh  test_e2e.sh
src/: main.rs
test-client/: Cargo.toml
test-client/src/: main.rs
tests/: fixture.json
