[package]
name = "example-runtime-api"
version = "0.1.0"
authors = ["Oasis Labs Inc. <info@oasislabs.com>"]
description = "Example of using a simple key/value store API"

[dependencies]
oasis-core-runtime = { git = "https://github.com/oasislabs/oasis-core", branch = "master" }
serde = "1.0.71"
serde_derive = "1.0"
