[package]
name = "test-client"
version = "0.1.0"
authors = ["Oasis Labs Inc. <info@oasislabs.com>"]
description = "Example runtime test client"

[dependencies]
# Internal.
example-runtime-api = { path = "../api" }

# Oasis Core.
oasis-core-client = { git = "https://github.com/oasislabs/oasis-core", tag = "v20.6" }
oasis-core-runtime = { git = "https://github.com/oasislabs/oasis-core", tag = "v20.6" }

# Others.
clap = "2.29.1"
tokio = "0.1.17"
grpcio = "0.4.6"
io-context = "0.2.0"
